log
ma.,  3 de may. de 2022 19:14:12: 
ma.,  3 de may. de 2022 19:14:12: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
 tests:  1|3
total_score: 10/70
2684978
ma.,  3 de may. de 2022 19:26:52: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_top':
heap.c:22:10: error: unused variable 'dato' [-Werror=unused-variable]
    void* dato = pq->heapArray->data;
          ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8316d04
ma.,  3 de may. de 2022 19:27:29: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
6705bd7
mi.,  4 de may. de 2022  8:46:28: 
 heap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  2|2
total_score: 20/70
93b10bd
mi.,  4 de may. de 2022  8:48:31: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
bca9c9e
mi.,  4 de may. de 2022 21:19:28: 
 heap.c | 35 ++++++++++++++++++-----------------
 1 file changed, 18 insertions(+), 17 deletions(-)
 tests:  3|2
total_score: 25/70
adc5164
mi.,  4 de may. de 2022 21:20:23: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
43efc27
ju.,  5 de may. de 2022 17:47:07: 
 heap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:39:37: error: 'p' undeclared (first use in this function)
       heapElem aux1 = pq->heapArray[p];
                                     ^
heap.c:39:37: note: each undeclared identifier is reported only once for each function it appears in
heap.c:40:48: error: 'i' undeclared (first use in this function)
       heapElem aux2 = pq->heapArray[pq->size + i];
                                                ^
Compilation failed
866fd09
ju.,  5 de may. de 2022 18:03:39: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 25/70
e812b74
ju.,  5 de may. de 2022 18:10:38: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
1d26c16
ju.,  5 de may. de 2022 18:15:54: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
2cd26b1
ju.,  5 de may. de 2022 18:27:51: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
f7c0c6f
ju.,  5 de may. de 2022 18:48:42: 
 heap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|2
total_score: 35/70
f7c0c6f
ju.,  5 de may. de 2022 18:50:44: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
total_score: 35/70
d17f5e8
ju.,  5 de may. de 2022 18:52:07: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
d17f5e8
ju.,  5 de may. de 2022 19:01:11: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
total_score: 35/70
ce5be1d
